--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,3 +13,6 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+URL: https://andrewcstewart.github.io/researchr/, https://github.com/andrewcstewart/researchr
+Suggests: 
+    rmarkdown
