--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -6,11 +6,12 @@ authors:
   Andrew Stewart:
     href: https://www.andrewcstewart.com
 
-template:
-  opengraph:
-    image:
-      src: man/figures/card.png
-      alt: "Pool noodles configured to form the word poolnoodlr"
-    twitter:
-      creator: "@andrewcstewart"
-      card: summary_large_image
+navbar:
+  structure:
+    left:  [home, intro, reference, articles, tutorials, news]
+    right: [github, twitter]
+
+twitter:
+  icon: "fab fa-twitter fa-lg"
+  href: http://twitter.com/andrewcstewart
+
